k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: changewatch
  namespace: changewatch
spec:
  type: ClusterIP
  selector:
    app: changewatch
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
