k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: changewatch-ingress
  namespace: changewatch
spec:
  ingressClassName: nginx
  rules:
    - host: changewatch.madebysteven.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: changewatch
                port:
                  number: 80
